<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="isLoading"
            type="Boolean" />


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.community.fragments.BlogFragment"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/postal_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="44504"
                android:textColor="@color/textColorDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/location_ic"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/location_ic"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/postal_code_text"
                app:layout_constraintEnd_toStartOf="@+id/postal_code_text"
                app:layout_constraintTop_toTopOf="@+id/postal_code_text" />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button_32"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/postal_code_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/postal_code_text"
                tools:ignore="ContentDescription" />


            <ImageView
                android:id="@+id/add_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_32"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/postal_code_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/postal_code_text"
                tools:ignore="ContentDescription" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:paddingVertical="15dp"
                android:orientation="vertical"
                android:visibility="@{isLoading ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postal_code_text">

                <include
                    layout="@layout/loading_blog" />

                <include
                    layout="@layout/loading_blog" />

                <include
                    layout="@layout/loading_blog"/>

                <include
                    layout="@layout/loading_blog"/>

                <include
                    layout="@layout/loading_blog"/>

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/blog_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:visibility="@{isLoading ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postal_code_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/add_post_bottom_sheet"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/backgroundColor"-->
<!--            app:behavior_peekHeight="0dp"-->
<!--            app:layout_behavior="@string/bottom_sheet_behavior">-->

<!--            <TextView-->
<!--                android:id="@+id/add_edit_post_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="15dp"-->
<!--                android:fontFamily="@font/montserrat_semi_bold"-->
<!--                android:text="@string/add_post"-->
<!--                android:textColor="@color/textColorDark"-->
<!--                android:textSize="20sp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <ImageView-->
<!--                android:id="@+id/cancel_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/cancel_icon_32"-->
<!--                android:layout_marginStart="15dp"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/add_edit_post_text"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/add_edit_post_text"-->
<!--                tools:ignore="ContentDescription" />-->

<!--            <ImageView-->
<!--                android:id="@+id/add_image_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_image_32"-->
<!--                android:layout_marginEnd="15dp"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/add_edit_post_text"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@+id/add_edit_post_text"-->
<!--                tools:ignore="ContentDescription" />-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/image_recyclerView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/add_edit_post_text" />-->

<!--            <EditText-->
<!--                android:id="@+id/content_edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_margin="15dp"-->
<!--                android:background="@drawable/rounded_edge"-->
<!--                android:padding="10dp"-->
<!--                android:gravity="start"-->
<!--                android:textColor="@color/textColorDark"-->
<!--                android:fontFamily="@font/montserrat_regular"-->
<!--                android:textSize="18sp"-->
<!--                android:lineSpacingExtra="4dp"-->
<!--                android:hint="@string/write_something_here"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/post_button"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/image_recyclerView" />-->


<!--            <Button-->
<!--                android:id="@+id/post_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="70dp"-->
<!--                android:layout_margin="15dp"-->
<!--                android:background="@drawable/rent_apply_button"-->
<!--                android:fontFamily="@font/montserrat_semi_bold"-->
<!--                android:text="@string/post"-->
<!--                android:textColor="@color/textColorLight"-->
<!--                android:textSize="18sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                tools:layout_editor_absoluteX="15dp" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <include
            android:id="@+id/add_include"
            layout="@layout/bottom_sheet_add_blog"/>

        <include
            android:id="@+id/report_include"
            layout="@layout/report_bottom_sheet"/>

        <include
            android:id="@+id/comment_include"
            layout="@layout/comment_bottom_sheet"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>